testsuite/tests/parser/should_fail/strictnessDataCon_B.hs
type T = MkT { a :: Int + {-# UNPACK #-} }
