testsuite/tests/parser/should_fail/strictnessDataCon_B.stderr

strictnessDataCon_B.hs:1:27: error:
    {-# UNPACK #-} cannot appear inside a type.
